# johnny

./: .gitignore  HANDOFF.md  PLAN.md  README.md  pyproject.toml
src/johnny/: __init__.py  __main__.py  boot.py  bundled.py  cli.py  config.py  doctor.py  lifecycle.py  migrate.py  util.py
src/johnny/backends/: __init__.py  base.py  llamacpp.py  lmstudio.py  vllm.py
src/johnny/cluster/: __init__.py  agent.py  state.py
src/johnny/daemon/: __init__.py  server.py
src/johnny/discover/: __init__.py  auth.py  fit.py  search.py
src/johnny/engine/: __init__.py  launch.py  placement.py  profiles.py  service.py
src/johnny/hardware/: detect.py  dtypes.py  hostinfo.py  specs.py
src/johnny/hardware/data/: gpu_specs.json
src/johnny/induct/: __init__.py  grid.py  llamacpp.py  pipeline.py  report.py  stages.py
src/johnny/registry/: importer.py  normalize.py  schema.py  store.py
src/johnny/runtime/: lock.py  probe.py
src/johnny/scripts/: arc_eval.py  audit-models.py  bench.sh  bench_llama_speed.sh  bench_llamacpp.sh  code_needle.py  humaneval_chat_score.py  probe-mtp-availability.sh  probe-wmma-opcodes.sh  push-coder-ctx.sh  wait-ready.sh
src/johnny/telemetry/: collect.py  schema.py  sources.py
src/johnny/tui/: __init__.py  app.py
tests/: test_profiles.py
